 . [FIX] All: cocos2d constants start with kCC. Change is backward compatible (issue #809)
 . [FIX] Actions: CCRepeat works smoothly, without jerks (re-fixed issue #390)
 . [FIX] Actions: CCAnimate frame calculation is more precise (issue #758)
 . [FIX] CocosDenshion: Fixed mute (issue #789)
 . [FIX] RenderTexture: removed limit when saving images (issue #782)
 . [FIX] Sprite, LabelAtlas, TiledMap: opactiy + color works even when the texture is premultiplied (issue #668)
 . [FIX] TMX: TMXTileMap supports any kind of objects, like CCSprite (issue #700, #765)
 . [FIX] TMX: TMXLayer uses the opacity defined for the layer (issue #785)
 . [FIX] TMX: TMXLayer raises exception if it receives the addChild message (issue #808)
 . [FIX] Texture2D: removed NSLog when image was NULL (issue #802)
 . [FIX] Xcode: hardware requirements in .plist: doesn't contain disabled features (issue #769)
 
version 0.99.0 - 18-Feb-2010
 . CocosDenshion: background music can loop (issue #774)
 . CocosDenshion: allow audio session category to be changed (issue #775)
 . CocosDenshion: can be initialized before cocos2d (issue #777, #773)

version 0.99.0-final - 15-Feb-2010
 . Box2d: updated to r58 (issue #494)
 . Director: Only send "cleanup" when the scene is replaced (re fixed issue #709)
 . CocosDenshion: SimpleAudioEngine incorrectly accessing CDAudioManager (issue #748)
 . CocosDenshion: added support for 22Khz OpenAL (issue #594)
 . CocosDenshion: fixed wrong error check in CocosDenshion (issue #678)
 . CocosDenshion: added shutdown method (issue #688)
 . CocosDenshion: allow usage of alBufferDataStatic (issue #753)
 . CocosDenshion: added stopAllSounds (issue #756)
 . CocosDenshion: fixed small leak in background music file name string (issue #644)
 . CocosDenshion: CDAudioManager support for multiple AVAudioPlayers (issue #764)
 . Compatiblity: TextureNode is subclass of CCSprite (issue #755)
 . Node: only uses bits as bools, when they are not properties (fixed issue #743)